# RoamTesting

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Parallel_ROAM_Project_Plan.md  imgui.ini  vcpkg.json
assets/heightmaps/: Hm_Terrain_Test_129.pgm
assets/shaders/dx12/: GpuRoamLike.hlsl  Terrain.hlsl
assets/textures/: Tex_Terrain_Debug_Diffuse.ppm
benchmark-output/: dx12-stage4-algorithm-smoke.csv  runtime-benchmark-20260706-235441.csv  runtime-benchmark-20260706-235441.md  runtime-benchmark-20260707-003056.csv  runtime-benchmark-20260707-003056.md  runtime-benchmark-20260707-010041.csv  runtime-benchmark-20260707-010041.md  runtime-benchmark-20260707-010538.csv  runtime-benchmark-20260707-010538.md  runtime-benchmark-20260707-015947.csv  runtime-benchmark-20260707-015947.md  runtime-benchmark-20260707-131338.csv  runtime-benchmark-20260707-131338.md  runtime-benchmark-20260715-223926.csv  runtime-benchmark-20260715-223926.md  runtime-benchmark-20260715-230725.csv  runtime-benchmark-20260715-230725.md  runtime-benchmark-20260716-001019.csv  runtime-benchmark-20260716-001019.md  runtime-benchmark-20260716-002230.csv  runtime-benchmark-20260716-002230.md  runtime-benchmark-20260716-002350.csv  runtime-benchmark-20260716-002350.md  runtime-benchmark-20260716-002736.csv  runtime-benchmark-20260716-002736.md  runtime-benchmark-20260716-005115.csv  runtime-benchmark-20260716-005115.md  runtime-benchmark-20260716-005731.csv  runtime-benchmark-20260716-005731.md  runtime-benchmark-20260716-010008.csv  runtime-benchmark-20260716-010008.md
benchmark-output/report-experiments/: README.md
benchmark-output/report-experiments/experiment-01-baseline/: analysis_metrics.csv  exp01_baseline_r01.csv  exp01_baseline_r01.md  exp01_baseline_r02.csv  exp01_baseline_r02.md  exp01_baseline_r03.csv  exp01_baseline_r03.md  summary.csv  summary.md
benchmark-output/report-experiments/experiment-02-max-depth/: analysis_metrics.csv  exp02_depth12.csv  exp02_depth12.md  exp02_depth14.csv  exp02_depth14.md  exp02_depth16.csv  exp02_depth16.md  exp02_depth18.csv  exp02_depth18.md  exp02_depth20.csv  exp02_depth20.md  summary.csv  summary.md
benchmark-output/report-experiments/experiment-03-distance-scale/: analysis_metrics.csv  exp03_distance20.csv  exp03_distance20.md  exp03_distance40.csv  exp03_distance40.md  exp03_distance60.csv  exp03_distance60.md  exp03_distance80.csv  exp03_distance80.md  summary.csv  summary.md
benchmark-output/report-experiments/experiment-04-heightmap/: analysis_metrics.csv  exp04_heightmap_peking513.csv  exp04_heightmap_peking513.md  exp04_heightmap_test129.csv  exp04_heightmap_test129.md  summary.csv  summary.md
benchmark-output/report-experiments/experiment-05-gpu-breakdown/: analysis_metrics.csv  exp05_gpu_breakdown.csv  exp05_gpu_breakdown.md  summary.csv  summary.md
cmake/: CompilerWarnings.cmake  Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake
docs/parallel-roam/: 01-project-scope.md  02-theory-and-architecture.md  03-implementation-strategies.md  04-milestones.md  05-experiments-and-benchmarks.md  06-risks-and-delivery.md  07-reference-projects.md  08-engine-framework.md  09-development-guidelines.md  10-dependency-setup.md  11-bug-fix-log.md  12-research-hypothesis-validation-plan.md  13-dx12-render-pipeline-migration-plan.md  14-dx12-migration-stage0-stage1-report.md  15-large-cbt-architecture-reference.md  16-cbt-2024-integration-plan.md  final-technical-report.docx  final-technical-report.md
scripts/: build_report_docx.py  common.bat  common.ps1  common.sh  export_code_snapshot.py  generate_report_experiment_charts.py  run_debug_fetch.bat  run_debug_fetch.ps1  run_debug_fetch.sh  run_release_fetch.bat  run_release_fetch.ps1  run_release_fetch.sh  run_relwithdebinfo_fetch.bat  run_relwithdebinfo_fetch.ps1  run_relwithdebinfo_fetch.sh  run_smoke_test_fetch.bat  run_smoke_test_fetch.ps1  run_smoke_test_fetch.sh  setup_portable_cmake.bat
src/: main.cpp
src/algorithms/: ITerrainLodAlgorithm.h  TerrainLodProfiling.h
src/algorithms/classic_roam/: ClassicRoamMeshBuilder.cpp  ClassicRoamMeshBuilder.h  ClassicRoamMeshEmit.cpp  ClassicRoamScoring.cpp  ClassicRoamState.cpp  ClassicRoamTerrainLodAlgorithm.cpp  ClassicRoamTerrainLodAlgorithm.h  ClassicRoamTopology.cpp  ClassicRoamValidation.cpp
src/algorithms/data_oriented_roam/: DataOrientedRoamCandidateMarking.cpp  DataOrientedRoamErrorEvaluation.cpp  DataOrientedRoamMeshBuilder.cpp  DataOrientedRoamMeshBuilder.h  DataOrientedRoamMeshEmit.cpp  DataOrientedRoamParallel.h  DataOrientedRoamScoring.cpp  DataOrientedRoamState.cpp  DataOrientedRoamState.h  DataOrientedRoamTerrainLodAlgorithm.cpp  DataOrientedRoamTerrainLodAlgorithm.h  DataOrientedRoamThreadPool.cpp  DataOrientedRoamThreadPool.h  DataOrientedRoamTopology.cpp  DataOrientedRoamValidation.cpp
src/algorithms/gpu_roam/: GpuRoamActiveLeafCompaction.cpp  GpuRoamActiveLeafCompaction.h  GpuRoamBufferSchema.cpp  GpuRoamBufferSchema.h  GpuRoamCandidateMarking.cpp  GpuRoamCandidateMarking.h  GpuRoamComputeSupport.cpp  GpuRoamComputeSupport.h  GpuRoamErrorEvaluation.cpp  GpuRoamErrorEvaluation.h  GpuRoamMeshBuilder.cpp  GpuRoamMeshBuilder.h  GpuRoamMeshEmit.cpp  GpuRoamMeshEmit.h  GpuRoamSplitOnlyTopology.cpp  GpuRoamSplitOnlyTopology.h  GpuRoamState.h  (+3 more)
src/app/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  InputState.cpp  InputState.h  RuntimeBenchmark.cpp  RuntimeBenchmark.h
src/benchmark/: RoamProbe.cpp  RoamProbe.h  TerrainLodBenchmark.cpp  TerrainLodBenchmark.h
src/gui/: ImGuiLayer.cpp  ImGuiLayer.h
src/platform/: OpenGlCapabilities.cpp  OpenGlCapabilities.h  Window.cpp  Window.h
src/render/: D3D12GraphicsBackend.cpp  D3D12GraphicsBackend.h  D3D12TerrainRenderer.cpp  GraphicsBackend.cpp  GraphicsBackend.h  OpenGlGraphicsBackend.cpp  OpenGlGraphicsBackend.h  Shader.cpp  Shader.h  TerrainRenderer.cpp  TerrainRenderer.h  TriangleRenderer.cpp  TriangleRenderer.h
src/terrain/: HeightMap.cpp  HeightMap.h  TerrainMeshBuilder.cpp  TerrainMeshBuilder.h
tools/cmake/: README.md
(+2092 files in other folders)
