cmake_minimum_required(VERSION 3.24)

project(
    ParallelROAM
    VERSION 0.1.0
    DESCRIPTION "Real-time adaptive terrain subdivision experiments across CPU, data-oriented CPU, and GPU pipelines"
    LANGUAGES C CXX
)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

include(ProjectOptions)
include(CompilerWarnings)
include(Sanitizers)
include(Dependencies)

parallel_roam_apply_global_options()
find_package(Threads REQUIRED)

string(TOUPPER "${PARALLEL_ROAM_GRAPHICS_API}" PARALLEL_ROAM_GRAPHICS_API_NORMALIZED)
if(NOT PARALLEL_ROAM_GRAPHICS_API_NORMALIZED STREQUAL "OPENGL" AND
   NOT PARALLEL_ROAM_GRAPHICS_API_NORMALIZED STREQUAL "D3D12")
    message(FATAL_ERROR "PARALLEL_ROAM_GRAPHICS_API must be OpenGL or D3D12.")
endif()
set(
    PARALLEL_ROAM_GRAPHICS_API_NORMALIZED
    "${PARALLEL_ROAM_GRAPHICS_API_NORMALIZED}"
    CACHE INTERNAL
    "Normalized graphics backend name."
    FORCE
)
message(STATUS "Parallel ROAM graphics backend: ${PARALLEL_ROAM_GRAPHICS_API}")

add_library(parallel_roam_project_options INTERFACE)
target_compile_features(parallel_roam_project_options INTERFACE cxx_std_20)

if(MSVC)
    target_compile_options(parallel_roam_project_options INTERFACE /utf-8)
endif()

add_library(parallel_roam_project_warnings INTERFACE)
parallel_roam_set_project_warnings(parallel_roam_project_warnings)

if(PARALLEL_ROAM_ENABLE_SANITIZERS)
    parallel_roam_enable_sanitizers(parallel_roam_project_options)
endif()

if(PARALLEL_ROAM_BUILD_APP)
    parallel_roam_prepare_dependencies()

    set(PARALLEL_ROAM_APP_SOURCES)
    set(PARALLEL_ROAM_FULL_APP_AVAILABLE OFF)

    if(PARALLEL_ROAM_GRAPHICS_API_NORMALIZED STREQUAL "OPENGL" AND
       TARGET ParallelROAM::OpenGL AND
       TARGET ParallelROAM::SDL2 AND
       TARGET ParallelROAM::GLM AND
       TARGET ParallelROAM::GLAD AND
       TARGET ParallelROAM::ImGui AND
       TARGET ParallelROAM::STB)
        set(PARALLEL_ROAM_FULL_APP_AVAILABLE ON)
        list(
            APPEND
            PARALLEL_ROAM_APP_SOURCES
                src/app/Application.cpp
                src/app/CameraController.cpp
                src/app/InputState.cpp
                src/app/RuntimeBenchmark.cpp
                src/algorithms/classic_roam/ClassicRoamTerrainLodAlgorithm.cpp
                src/algorithms/classic_roam/ClassicRoamMeshBuilder.cpp
                src/algorithms/classic_roam/ClassicRoamMeshEmit.cpp
                src/algorithms/classic_roam/ClassicRoamScoring.cpp
                src/algorithms/classic_roam/ClassicRoamState.cpp
                src/algorithms/classic_roam/ClassicRoamTopology.cpp
                src/algorithms/classic_roam/ClassicRoamValidation.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamTerrainLodAlgorithm.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamCandidateMarking.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamErrorEvaluation.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamMeshBuilder.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamMeshEmit.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamScoring.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamState.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamThreadPool.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamTopology.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamValidation.cpp
                src/algorithms/gpu_roam/GpuRoamActiveLeafCompaction.cpp
                src/algorithms/gpu_roam/GpuRoamBufferSchema.cpp
                src/algorithms/gpu_roam/GpuRoamCandidateMarking.cpp
                src/algorithms/gpu_roam/GpuRoamComputeSupport.cpp
                src/algorithms/gpu_roam/GpuRoamErrorEvaluation.cpp
                src/algorithms/gpu_roam/GpuRoamMeshBuilder.cpp
                src/algorithms/gpu_roam/GpuRoamMeshEmit.cpp
                src/algorithms/gpu_roam/GpuRoamSplitOnlyTopology.cpp
                src/algorithms/gpu_roam/GpuRoamState.cpp
                src/algorithms/gpu_roam/GpuRoamTerrainLodAlgorithm.cpp
                src/benchmark/TerrainLodBenchmark.cpp
                src/benchmark/RoamProbe.cpp
                src/gui/ImGuiLayer.cpp
                src/platform/OpenGlCapabilities.cpp
                src/platform/Window.cpp
                src/render/Shader.cpp
                src/render/GraphicsBackend.cpp
                src/render/OpenGlGraphicsBackend.cpp
                src/render/TerrainRenderer.cpp
                src/terrain/HeightMap.cpp
                src/terrain/TerrainMeshBuilder.cpp
        )
        message(STATUS "Full Parallel ROAM application target enabled.")
    elseif(PARALLEL_ROAM_GRAPHICS_API_NORMALIZED STREQUAL "D3D12" AND
           TARGET ParallelROAM::D3D12 AND
           TARGET ParallelROAM::SDL2 AND
           TARGET ParallelROAM::GLM AND
           TARGET ParallelROAM::ImGui AND
           TARGET ParallelROAM::STB)
        set(PARALLEL_ROAM_FULL_APP_AVAILABLE ON)
        list(
            APPEND
            PARALLEL_ROAM_APP_SOURCES
                src/app/Application.cpp
                src/app/CameraController.cpp
                src/app/InputState.cpp
                src/app/RuntimeBenchmark.cpp
                src/algorithms/classic_roam/ClassicRoamTerrainLodAlgorithm.cpp
                src/algorithms/classic_roam/ClassicRoamMeshBuilder.cpp
                src/algorithms/classic_roam/ClassicRoamMeshEmit.cpp
                src/algorithms/classic_roam/ClassicRoamScoring.cpp
                src/algorithms/classic_roam/ClassicRoamState.cpp
                src/algorithms/classic_roam/ClassicRoamTopology.cpp
                src/algorithms/classic_roam/ClassicRoamValidation.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamTerrainLodAlgorithm.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamCandidateMarking.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamErrorEvaluation.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamMeshBuilder.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamMeshEmit.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamScoring.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamState.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamThreadPool.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamTopology.cpp
                src/algorithms/data_oriented_roam/DataOrientedRoamValidation.cpp
                src/algorithms/gpu_roam/GpuRoamBufferSchema.cpp
                src/algorithms/gpu_roam/d3d12/D3D12GpuRoamTerrainLodAlgorithm.cpp
                src/benchmark/TerrainLodBenchmark.cpp
                src/benchmark/RoamProbe.cpp
                src/gui/ImGuiLayer.cpp
                src/platform/Window.cpp
                src/render/GraphicsBackend.cpp
                src/render/D3D12GraphicsBackend.cpp
                src/render/D3D12TerrainRenderer.cpp
                src/terrain/HeightMap.cpp
                src/terrain/TerrainMeshBuilder.cpp
        )
        message(STATUS "Full Parallel ROAM D3D12 application target enabled.")
    else()
        message(STATUS "Full application dependencies are incomplete; building bootstrap target only.")
    endif()

    add_executable(parallel_roam src/main.cpp ${PARALLEL_ROAM_APP_SOURCES})
    add_executable(ParallelROAM::app ALIAS parallel_roam)

    target_include_directories(parallel_roam PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
    target_compile_definitions(parallel_roam PRIVATE PARALLEL_ROAM_BUILD_CONFIG="$<CONFIG>")

    if(PARALLEL_ROAM_GRAPHICS_API_NORMALIZED STREQUAL "OPENGL")
        target_compile_definitions(parallel_roam PRIVATE PARALLEL_ROAM_GRAPHICS_API_OPENGL=1)
    else()
        target_compile_definitions(parallel_roam PRIVATE PARALLEL_ROAM_GRAPHICS_API_D3D12=1)
    endif()

    target_link_libraries(
        parallel_roam
        PRIVATE
            parallel_roam_project_options
            parallel_roam_project_warnings
            Threads::Threads
    )

    parallel_roam_link_optional_dependencies(parallel_roam)

    if(PARALLEL_ROAM_FULL_APP_AVAILABLE)
        target_compile_definitions(parallel_roam PRIVATE PARALLEL_ROAM_BUILD_FULL_APP=1)
    endif()

    if(PARALLEL_ROAM_FULL_APP_AVAILABLE AND PARALLEL_ROAM_GRAPHICS_API_NORMALIZED STREQUAL "D3D12")
        file(GLOB PARALLEL_ROAM_DXC_CANDIDATES
            "C:/Program Files (x86)/Windows Kits/10/bin/*/x64/dxc.exe")
        list(SORT PARALLEL_ROAM_DXC_CANDIDATES COMPARE NATURAL ORDER DESCENDING)
        if(NOT PARALLEL_ROAM_DXC_CANDIDATES)
            message(FATAL_ERROR "D3D12 terrain rendering requires dxc.exe from the Windows SDK.")
        endif()
        list(GET PARALLEL_ROAM_DXC_CANDIDATES 0 PARALLEL_ROAM_DXC_EXECUTABLE)

        set(PARALLEL_ROAM_DX12_SHADER_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated/shaders")
        set(PARALLEL_ROAM_DX12_VERTEX_SHADER "${PARALLEL_ROAM_DX12_SHADER_DIR}/TerrainVS.cso")
        set(PARALLEL_ROAM_DX12_PIXEL_SHADER "${PARALLEL_ROAM_DX12_SHADER_DIR}/TerrainPS.cso")
        set(PARALLEL_ROAM_DX12_GPU_ROAM_SHADERS
            "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamCompact.cso"
            "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamError.cso"
            "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamCandidates.cso"
            "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamSplit.cso"
            "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamResetLeaves.cso"
            "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamEmit.cso"
        )
        target_compile_definitions(
            parallel_roam
            PRIVATE PARALLEL_ROAM_DX12_SHADER_DIR="${PARALLEL_ROAM_DX12_SHADER_DIR}")
        add_custom_command(
            OUTPUT
                ${PARALLEL_ROAM_DX12_VERTEX_SHADER}
                ${PARALLEL_ROAM_DX12_PIXEL_SHADER}
                ${PARALLEL_ROAM_DX12_GPU_ROAM_SHADERS}
            COMMAND ${CMAKE_COMMAND} -E make_directory "${PARALLEL_ROAM_DX12_SHADER_DIR}"
            COMMAND ${PARALLEL_ROAM_DXC_EXECUTABLE}
                -T vs_6_0 -E VSMain -Fo ${PARALLEL_ROAM_DX12_VERTEX_SHADER}
                "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/dx12/Terrain.hlsl"
            COMMAND ${PARALLEL_ROAM_DXC_EXECUTABLE}
                -T ps_6_0 -E PSMain -Fo ${PARALLEL_ROAM_DX12_PIXEL_SHADER}
                "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/dx12/Terrain.hlsl"
            COMMAND ${PARALLEL_ROAM_DXC_EXECUTABLE}
                -T cs_6_0 -E CSCompact -Fo "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamCompact.cso"
                "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/dx12/GpuRoamLike.hlsl"
            COMMAND ${PARALLEL_ROAM_DXC_EXECUTABLE}
                -T cs_6_0 -E CSErrorEvaluation -Fo "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamError.cso"
                "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/dx12/GpuRoamLike.hlsl"
            COMMAND ${PARALLEL_ROAM_DXC_EXECUTABLE}
                -T cs_6_0 -E CSCandidateMarking -Fo "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamCandidates.cso"
                "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/dx12/GpuRoamLike.hlsl"
            COMMAND ${PARALLEL_ROAM_DXC_EXECUTABLE}
                -T cs_6_0 -E CSSplitOnlyTopology -Fo "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamSplit.cso"
                "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/dx12/GpuRoamLike.hlsl"
            COMMAND ${PARALLEL_ROAM_DXC_EXECUTABLE}
                -T cs_6_0 -E CSResetActiveLeafCount -Fo "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamResetLeaves.cso"
                "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/dx12/GpuRoamLike.hlsl"
            COMMAND ${PARALLEL_ROAM_DXC_EXECUTABLE}
                -T cs_6_0 -E CSMeshEmit -Fo "${PARALLEL_ROAM_DX12_SHADER_DIR}/GpuRoamEmit.cso"
                "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/dx12/GpuRoamLike.hlsl"
            DEPENDS
                "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/dx12/Terrain.hlsl"
                "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/dx12/GpuRoamLike.hlsl"
            VERBATIM
        )
        add_custom_target(parallel_roam_dx12_shaders
            DEPENDS
                ${PARALLEL_ROAM_DX12_VERTEX_SHADER}
                ${PARALLEL_ROAM_DX12_PIXEL_SHADER}
                ${PARALLEL_ROAM_DX12_GPU_ROAM_SHADERS})
        add_dependencies(parallel_roam parallel_roam_dx12_shaders)
        add_custom_command(
            TARGET parallel_roam
            POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:parallel_roam>/assets/shaders/dx12"
            COMMAND ${CMAKE_COMMAND} -E copy_directory
                "${PARALLEL_ROAM_DX12_SHADER_DIR}"
                "$<TARGET_FILE_DIR:parallel_roam>/assets/shaders/dx12"
            COMMENT "Copying compiled D3D12 shaders next to ParallelROAM"
        )
    endif()

    set_target_properties(
        parallel_roam
        PROPERTIES
            OUTPUT_NAME "ParallelROAM"
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    )

    foreach(config IN ITEMS Debug Release RelWithDebInfo MinSizeRel)
        string(TOUPPER "${config}" config_upper)
        set_target_properties(
            parallel_roam
            PROPERTIES
                "RUNTIME_OUTPUT_DIRECTORY_${config_upper}" "${CMAKE_BINARY_DIR}/bin"
        )
    endforeach()

    add_custom_command(
        TARGET parallel_roam
        POST_BUILD
        COMMAND
            ${CMAKE_COMMAND} -E copy_directory
            "${CMAKE_CURRENT_SOURCE_DIR}/assets"
            "$<TARGET_FILE_DIR:parallel_roam>/assets"
        COMMENT "Copying runtime assets next to ParallelROAM"
    )
endif()

if(PARALLEL_ROAM_BUILD_TESTS)
    enable_testing()

    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/CMakeLists.txt")
        add_subdirectory(tests)
    else()
        message(STATUS "PARALLEL_ROAM_BUILD_TESTS is ON, but tests/CMakeLists.txt does not exist yet.")
    endif()
endif()
